# industrial-sensor-sim

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: cmake_uninstall.cmake.in
include/industrial/: Config.hpp  MovingAverageFloat.hpp  MqttPublisher.hpp  SensorSample.hpp  SimSensor.hpp  SimpleSPSC.hpp  SpscRing.hpp  Status.hpp  sensor_sample.hpp
src/: CMakeLists.txt  MqttPublisher.cpp  SimSensor.cpp  SimpleSPSC.cpp  main.cpp
tests/: CMakeLists.txt  test_spsc_ring.cpp
visualizer/: live_plot.py
